docs/references/1.0.x/models/collection.md
# Collection

Collection

## Properties

| Name | Type | Description |
|------|------|-------------|
| $id | string | Collection ID. |
| $createdAt | string | Collection creation date in ISO 8601 format. |
| $updatedAt | string | Collection update date in ISO 8601 format. |
| $permissions | array | Collection permissions. [Learn more about permissions](https://appwrite.io/docs/advanced/platform/permissions). |
| databaseId | string | Database ID. |
| name | string | Collection name. |
| enabled | boolean | Collection enabled. |
| documentSecurity | boolean | Whether document-level permissions are enabled. [Learn more about permissions](https://appwrite.io/docs/advanced/platform/permissions). |
| attributes | array | Collection attributes. Can be one of: [AttributeBoolean model](/docs/references/1.0.x/models/attributeBoolean), [AttributeInteger model](/docs/references/1.0.x/models/attributeInteger), [AttributeFloat model](/docs/references/1.0.x/models/attributeFloat), [AttributeEmail model](/docs/references/1.0.x/models/attributeEmail), [AttributeEnum model](/docs/references/1.0.x/models/attributeEnum), [AttributeURL model](/docs/references/1.0.x/models/attributeUrl), [AttributeIP model](/docs/references/1.0.x/models/attributeIp), [AttributeDatetime model](/docs/references/1.0.x/models/attributeDatetime), [AttributeString model](/docs/references/1.0.x/models/attributeString) |
| indexes | array<index> | Collection indexes. Can be one of: [Index model](/docs/references/1.0.x/models/index) |

## Example

### REST

```json
{}
```

### GraphQL

```json
{}
```

